# virtualisation

./: .gitignore  README.md  create_lightweight_vm.py  example.py  example2.py  example3.py  example_win.py  hyperv_remake.cpp  pyproject.toml  verify_advanced.py  verify_links.py
.github/workflows/: ci.yml
hyper_x/: CMakeLists.txt  main.cpp  visualizer.html
hyper_x/driver/: Makefile  hyperx_drm.c
hyper_x/include/: IHypervisor.h  KvmBackend.h  Loader.h  UefiLoader.h  WhpxBackend.h  xgpu_protocol.h
hyper_x/src/: KvmBackend.cpp  Loader.cpp  UefiLoader.cpp  WhpxBackend.cpp  libvulkan_hyperx.cpp  main.cpp
hyper_x/tools/: gen_firmware.py
hyper_x/tools/firmware/: hyperx_firmware.fd
hyper_x/visualizer/: Program.cs  visualizer.csproj
tests/: __init__.py  test_api.py  test_catalog.py  test_cli.py  test_cluster.py  test_hyperv.py  test_kvm.py  test_remote_provider.py  test_sysprep.py
virtual_py/: __init__.py  __main__.py  cli.py  factory.py  iac.py
virtual_py/api/: autoscaler.py  cluster.py  models.py  server.py
virtual_py/catalog/: __init__.py  downloader.py  models.py  registry.py
virtual_py/catalog/linux/: __init__.py  alma_8.py  alma_9.py  alpine.py  alpinelinux_edge.py  archlinux.py  centos_7.py  centos_8_stream.py  centos_9_stream.py  clear_linux.py  coreos.py  debian.py  fedora_39.py  fedora_40.py  gentoo.py  kali_linux.py  manjaro.py  mint_21.py  nixos.py  opensuse_leap_15.py  oracle_linux_9.py  (+13 more)
virtual_py/core/: exceptions.py  interfaces.py  models.py
virtual_py/utils/: __init__.py  backup.py  cloudinit.py  compiler.py  gpu_helper.cpp  sysprep.py  validation.py
(+12 files in other folders)
