[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "virtual-py"
version = "0.1.0"
description = "A unified, asynchronous Python abstraction layer for KVM and Hyper-V"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "pycdlib>=1.11.0",
    "pyyaml>=6.0",
    "websockets>=11.0",
]


[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.18.0",
]

[project.scripts]
virtual-py = "virtual_py.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
